Fri Sep 20 10:55:03 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/templates.c: fixed a problem reported by Mark Vakoc

Wed Sep 18 15:46:50 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libexslt/date.c: fixed the embedded '-' in the duration format 
	  function
	* tests/.../difference.1.xml: added test cases which illustrated
	  the above bug

Tue Sep 17 18:01:22 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* libexslt/date.c: fixed date:difference() bugs, removed all
	  type conversion warnings.
	* libxslt/xsltutils.c: removed unused local variable.

Sat Sep 14 16:17:51 MDT 2002 John Fleck <jfleck@inkstain.net>

	* doc/xsltproc.html:
	oops, forgot to update the html version of the man page

Sat Sep 14 16:10:21 MDT 2002 John Fleck <jfleck@inkstain.net>

	* doc/xsltproc.xml
	* doc/xsltproc.1
	* doc/xsltproc2.html
	Fixing erroneous mention of old --warnnet option (thanks to Jean
	T. Anderson for pointing this out)

Tue Sep 10 21:05:28 CEST 2002 Igor Zlatkovic <igor@stud.fh-frankfurt.de>

	* win32/configure.js: added more readme info for the binary
	  package.
	
Mon Sep  9 14:07:06 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/pattern.c: fixed a bug in match="node()" reported by
	  Ben Ko

Mon Sep  9 14:06:25 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt.spec.in: fixes libary path for x86_64 AMD

Thu Sep  5 10:07:13 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* python/Makefile.am: applied patch from Christophe Merlet to
	  reestablish DESTDIR

Thu Aug 29 21:26:30 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* libxslt/transform.c: re-applied the patch from Nathan Myers about
	  a possible memory leak in case of error

Wed Aug 28 13:44:54 CEST 2002 Daniel Veillard <daniel@veillard.com>

	* doc/Libxslt-Logo-180x168.gif doc/Libxslt-Logo-90x34.gif:
	  nice logos generated by Marc Liyanage
	* doc/site.xsl *.html: changed the stylesheet to show the new
	  logo and regenerated the pages
