@@ -187,6 +187,13 @@ except: print 0"`
     fi
 fi
 AM_CONDITIONAL(WITH_PYTHON, test "$PYTHON_INCLUDES" != "")
+if test "$PYTHON_INCLUDES" != ""
+then
+    PYTHON_SUBDIR=python
+else
+    PYTHON_SUBDIR=
+fi
+AC_SUBST(PYTHON_SUBDIR)
 
 dnl
 dnl Debug for DV (-Wunreachable-code)
